# DragAndDrop

./: Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
draganddrop/backend/: Dockerfile  entrypoint.sh  main.py  requirements.txt
draganddrop/backend/api/: exceptions.py  router.py
draganddrop/frontend/: Dockerfile  package-lock.json  package.json
draganddrop/frontend/public/: index.html  site.webmanifest
draganddrop/frontend/src/: App.css  App.js  App.test.js  index.css
draganddrop/nginx/conf.d/: default.conf
nginx/conf.d/: default.conf
