[project]
name = "draganddrop"
version = "0.1.0"
description = ""
authors = [
    {name = "R-Kiselev",email = "sputnavik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
